--- a/style.css
+++ b/style.css
@@ -1,847 +1,289 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    text-decoration: none;
 }
 
 :root{
-   --black:#000;
-   --white:#ffffff;
-   --lightgrey:#f1f1f1;
-   --darkblue:#0d102c;
-   --primarycolor:#3d51f2;
-   --secondarycolor:#5670ef;
-   --lightDark:#080A25;
-   --darkText:#8388B4;
+    --bodyBg:#525561;
+    --cardBg:#262936;
+    --primaryTextColor:#fff;
+    --secondaryTextColor:#5c5e64;
+    --primaryColor:#1D90F5;
+    --secondaryColor:#3D404B;
+    --inputBg:#323644;
+    --focusBg:#3D404B;
+    --btnTextColor:#fff;
+
+}
+
+.lightTheme{
+    --bodyBg:#dde3ea;
+    --cardBg:rgb(255, 255, 255);
+    --primaryTextColor:#1E3050;
+    --secondaryTextColor:#5c5e64;
+    --primaryColor:#1D90F5;
+    --secondaryColor:#FFFFFF;
+    --inputBg:#e0e3e7;
+    --focusBg:#FFFFFF;
+    --btnTextColor:#5c5e64;
+
 }
 
 body{
     font-family: 'Poppins', sans-serif;
-    background-color: var(--darkblue);
-    color: var(--white);
+    background-color: var(--bodyBg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: -3;
 }
 
-/* Header */
 header{
-    width: 90%;
-    max-width: 1200px;
-    margin: auto;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 2em 1em;
 }
 
-#barContainer{
-    color: var(--white);
-    font-size: 1.5rem;
-    cursor: pointer;
+.logo{
+    position: relative;
+    color: var(--primaryTextColor);
+    font-size: 1rem;
+    padding-left: 35px;
+    margin-right: 4em;
 }
 
-.nav{
-    list-style-type: none;
-    color: var(--white);
-    position: fixed;
-    top: 0;
+.logo::before{
+    position: absolute;
+    content: " ";
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
     left: 0;
-    bottom: 0;
-    background-color: var(--lightDark);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 0;
-    overflow: hidden;
-    transition: all .3s ease-in-out;
-    z-index: 2;
-}
-
-.showNav{
-    padding: 1em;
-    padding-top: 5em;
-    width: 70%;
-    max-width: 300px;
-
-}
-
-.navLogo{
-   margin-bottom: 3rem;
+    background-color: var(--primaryColor);
 }
 
 .nav-link{
-    font-size: 1rem;
-    width: 100%;
-    font-weight: 500;
-    margin-bottom: 1.5rem;
-    text-transform: uppercase;
+    color: var(--secondaryTextColor);
     cursor: pointer;
-    white-space: nowrap;
+    margin-right: 2em;
+    font-weight: bold;
+    font-size: .9rem;
 }
 
-.nav-link a{
-    color: var(--white);
-}
-
-.sociallinkContainer{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2em;
-}
-
-.sociallink{
-    margin-right: 1em;
+.themeButton{
+    position: absolute;
+    right: 40px;
+    top: 40px;
+    font-size: 1.5rem;
+    transform: translate(0px,-10px);
     cursor: pointer;
+    color: var(--primaryTextColor);
+    transform: rotate(-20deg);
 }
 
-@media screen and (min-width:800px) {
-    .nav{
-        position: relative;
-        width: auto;
-        background-color: transparent;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        margin-right: 5%;
-    }
-    .nav-link{
-          margin-right: 2em;
-    }
-    .navLogo,#barContainer,.sociallinkContainer{
-        display: none;
-    }
+.projectIcon{
+    position: absolute;
+    right: 70px;
+    bottom: 50px;
+    font-size: 5rem;
+    color: var(--primaryTextColor);
+    opacity: 0;
 }
 
-/* Hero page */
-.headline{
-    color: var(--white);
-    font-size: 3rem;
-    width: 100%;
-}
-
-.cryptoText{
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke: 1px #fff;
-}
-
-.btnContainer{
-    margin-top: 2em;
-}
-
-.fa-play{
-    margin-left: .5em;
-}
-
-.sectionPic{
-    order: 0;
-}
-
-.sectionDesc{
-    order: 1;
-    margin-top: 1em;
-}
-
-@media screen and (min-width:800px) {
-    .sectionPic{
-        order: 1;
-    }
-    
-    .sectionDesc{
-        order: 0;
-    }  
-}
-@media screen and (min-width:1000px){
-    .headline{
-        font-size: 4em;
-    }
-}
-
-/* carousel */
-.carouselContainer{
-    display: grid;
-    gap: 10px;
-    grid-auto-flow: column;
-    grid-auto-columns: 100%;
-    overflow: hidden;
-    border-radius: 20px;
-    scroll-behavior: smooth;
-}
-
-
-.eachCarousel{
-    background-color: var(--lightgrey);
+section{
     display: flex;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: space-between;
-    padding: 1em;
-    border-radius: 20px;
+    width: 100vw;
     margin: auto;
-    width: 100%;
-    height: 300px;
-}
-.carouselDesc{
-    margin-left: 1em;
-}
-
-.carouselTitle{
-    color: var(--darkblue);
-    font-size: 1.5rem;
-    margin-bottom: 1em;
-}
-
-.carouselPara{
-    color: var(--lightDark);
-    font-weight: 500;
-    margin-bottom: 1em;
-}
-
-.carouselPrice{
-    color: var(--darkblue);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 70%;
-    margin-bottom: 1em;
-}
-
-.carouselDiscount{
-    color: var(--primarycolor);
-}
-
-.rect{
-    width: 10px;
-    height: 10px;
-    background-color: var(--lightDark);
-}
-
-.carouselBtn{
-    background-color: var(--secondarycolor);
-    margin-top: 20px;
-    text-transform: uppercase;
-}
-
-.carouselIndicator{
-  height: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 1em;
-}
-
-.indicator{
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    background-color: var(--lightgrey);
-    cursor: pointer;
-    margin-right: 10px;
-    opacity: .5;
-}
-
-.activeIndicator{
-   opacity: 1;
-}
-
-@media screen and (min-width:700px) {
-    .carouselContainer{
-        grid-auto-columns: calc(100%/2);
-    }
-
-    .eachCarouselBorder{
-        border: 5px solid var(--primarycolor);
-    }
-    
-}
-
-@media screen and (min-width:1100px) {
-    .carouselContainer{
-        grid-auto-columns: calc(100%/3);
-    }
-
-}
-
-/* Processes */
-.processessDesc{
-    order: 0;
-}
-
-.processesPic{
-  order: 1;
-}
-
-.eachProcesses{
-    display: flex;
-    margin-bottom: 2em;
-}
-
-.eachProcesses img{
-    margin-right: 2em;
-}
-
-.processTitle{
-    color: var(--white);
-    margin-bottom: 1em;
-}
-
-/* Markets */
-
-.marketDesc{
-    order: 0;
-}
-
-.eachMarket{
-    display: flex;
-    margin-bottom: 2em;
-}
-
-.eachMarket img{
-    margin-right: 2em;
-}
-
-.marketTitle{
-    color: var(--white);
-    margin-bottom: 1em;
-}
-
-.marketspicSection{
-    background-color: var(--lightgrey);
-    border-radius: 20px;
-    padding: 1em;
-}
-
-.marketspicHeader{
-    color: var(--darkblue);
-    text-align: center;
-    padding: 1em;
-    text-transform: uppercase;
-}
-
-.marketsPicContainer{
-    width: 100%;
-    max-width: 400px;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 10px;
-    padding: 1em;
-    margin: auto;
-}
-
-.marketPic{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 150px;
-    border-radius: 20px;
-}
-
-.marketPic1{
-    background-color: #FC9531;
-}
-
-.marketPic2{
-  background-color: #4990FF;
-}
-
-.marketPic3{
-  background-color: #3EC2F1;
-}
-
-.marketPic4{
-   background-color: #50D79F;
-}
-
-.marketPic img{
-    width: 50px;
-}
-
-.marketTitle{
-  color: var(--white);
-  font-weight: bold;
-  margin-top: .5em;
-  text-transform: uppercase;
-}
-
-/* Dashboard */
-.dashboardDesc{
-    order: 0;
-}
-
-.dashboardPic{
-    order: 1;
-    margin-top: 2em;
-}
-
-@media screen and (min-width:800px) {
-    .dashboardDesc{
-        order: 1;
-    }
-    
-    .dashboardPic{
-        order: 0;
-    }
-}
-
-
-/* Funds */
-.fundSection{
-    width: 90%;
-    max-width: 1100px;
-    margin: auto;
-    margin-top: 5em;
-    margin-bottom: 5em;
-
-
-}
-.fundsContainer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-.fund{
-    margin-top: 3em;
-}
-
-.fundType{
-    color: var(--white);
-    margin-bottom: 1em;
-    font-size: 1.5rem;
-}
-
-@media screen and (min-width:800px) {
-    .fundSection{
-        width: 85%;
-    }    
-}
-
-@media screen and (min-width:1000px) {
-    .fundsContainer{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-
-    .fund{
-        margin-top: 1em;
-    }
-}
-
-/* Newsletter */
-
-.newsletter{
-    border: 1px solid #fff;
-    border-radius: 50px;
-    display: flex;
-    justify-content: space-between;
-    padding: 0;
-    overflow: hidden;
-}
-
-.newsletter input{
-    font-size: 1.1rem;
-    padding: .7em 1.5em;
-    width: 100%;
-    border: none;
-    outline: none;
-    background-color: transparent;
-}
-
-.newsletter input::placeholder{
-    color: var(--lightgrey);
-}
-
-.newsletter button{
-    background-color: var(--primarycolor);
-    font-weight: 700;
-}
-
-.newsletterDesc{
-    order: 0;
-}
-
-.newsletterPic{
-    order: 1;
-}
-
-@media screen and (min-width:800px) {
-    .newsletterDesc{
-        order: 1;
-    }
-    
-    .newsletterPic{
-        order: 0;
-    }
-}
-
-/* Join Now */
-footer{
-    background-color: var(--lightDark);
-    margin-top: 5em;
-}
-
-.joinSection,.footerlinksContainer{
-    width: 90%;
-    max-width: 1100px;
-    margin: auto;
-    padding: 1em;
-}
-
-.joinSection{
-    display: flex;
-    align-items: center;
-    padding: 3em 0em;
-}
-
-.joinSection .joinDesc{
-    width: 80%;
-}
-
-.joinSection button{
-    height: auto;
-}
-
-
-
-.footerlinksContainer{
-    width: 90%;
-    max-width: 1100px;
-    margin: auto;
-    padding: 1em;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    justify-content: space-between;
-    padding-top: 5em;
-    border-top: 1px solid var(--lightgrey);
-}
-
-.footersociallinkContainer{
-    margin-top: 1em;
-}
-
-.footerAboutus .sociallinkContainer{
-    justify-content: flex-start;
-}
-
-.footerlink{
-    display: flex;
-    flex-direction: column;
-    color: var(--white);
-}
-
-.linkTitle{
-    font-size: 1.5rem;
-    margin-bottom: .5em;
-}
-
-.footerlink a{
-    color: var(--white);
-    margin-bottom: 1em;
-    transition: all .5s ease-in-out;
-}
-
-.footerlink a:hover{
-    transform: translateX(10px);
-}
-
-.footerCopyright{
-    background-color: var(--darkblue);
-    padding: 1em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2em;
-}
-
-.footerCopyright p{
-    text-align: center;
-}
-
-.developedBy{
-    font-weight: bold;
-    color: var(--white);
-}
-
-@media screen and (min-width:700px) {
-    .footerlinksContainer{
-        grid-template-columns: 1fr 1fr 1fr 1fr;
-    }
-}
-
-
-/* Contact page */
-.contactSection{
-    margin-top: 2em;
-}
-.contactformContainer{
-    display: flex;
-    flex-direction: column;
-    order: 1;
-}
-
-.contactPic{
-    order: 0;
-    width: 150px;
-    background-color: rgba(241, 241, 241,.05);
-    border-top-left-radius: 20%;
-    
-}
-
-.contactPic img{
-    width: 100%;
-}
-
-.contactForm div{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-.contactInput{
-    width: 100%;
-    font-size: 1.1rem;
-    padding: 1em;
-    margin-bottom: 1em;
-    border-radius: 20px;
-    border: none;
-    outline: none;
-    border: 2px solid var(--white);
-    background-color: transparent;
-    resize: none;
-    color: var(--white);
-}
-
-.contactInput::placeholder{
-    color: var(--lightgrey);
-    text-transform: capitalize;
-}
-
-.contactBtn{
-    width: 200px;
-}
-
-.addressHeader{
-    text-align: center;
-    color: var(--white);
-    margin-bottom: 2em;
-}
-
-.address{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  justify-content: space-between;
-  width: 90%;
-  max-width: 1100px;
-  margin: auto;
-}
-
-.eachAddress h1{
-    color: var(--white);
-    margin-bottom: .5em;
-    font-size: 1.5rem;
-}
-
-.eachAddress p{
-    margin-bottom: 1em;
-}
-
-@media screen and (min-width:800px) {
-    .contactformContainer{
-        order: 0;
-    }
-    
-    .contactPic{
-        order: 1;
-    }
-
-    .address{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-}
-
-/* About Us */
-.aboutusDesc{
-    order: 0;
-}
-
-.statusContainer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 30px;
-    width: 90%;
-    max-width: 1100px;
-    margin: auto;
-}
-
-.status h1{
-    color: var(--white);
-    font-size: 1.5rem;
-    font-weight: lighter;
-}
-
-.status h1 b{
-    font-weight: bold;
-    font-size: 2rem;
-}
-
-/* offer */
-.services{
-    width: 90%;
-    max-width: 1100px;
-    margin: auto;
-    margin-top: 4em;
-}
-
-.aboutusimgContainer{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-}
-
-.aboutusimgContainer img{
-    width: 100%;
-    border-radius: 10px;
-}
-
-
-.offers{
-    margin-top: 5em;
-    display: grid;
-    gap: 50px;
-}
-
-.eachOffer{
-   display: flex;
-   align-items: flex-start;
-}
-
-.eachOffer img{
-    margin-right: 1em;
-}
-
-.offerDesc h1{
-    margin-bottom: .5em;
-    font-size: 1.5rem;
-}
-
-/* video */
-
-.videoSection{
-  display: grid;
-}
-
-.videoSectionHeader{
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: .5em;
-    font-weight: bold;
-}
-
-.video{
+    background: url("./img/bg.jpg");
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-size: cover;
     position: relative;
-    margin-bottom: 1em;
-    border-radius: 20px;
-    overflow: hidden;
+    z-index: 2;
+    padding: 40px;
+    padding-bottom: 4em;
+    height: 100vh;
 }
 
-.thumbnail{
-    width: 100%;
-}
-
-.playIcon{
+.overlay{
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    cursor: pointer;
-}
-
-/* Team */
-
-.teamSection{
-    margin-top: 5em;
-}
-
-.eachTeam{
-    background-color: transparent;
-    padding: 0;
-    display: flex;
-    gap: 10px;
-    justify-content: space-between;
-    align-items: center;
-    cursor: pointer;
-}
-
-.teamPic{
-    position: relative;
-    width: 80%;
-    margin: auto;
-}
-
-.eachTeam img{
+    background: linear-gradient(60deg,rgb(38, 41, 54),rgb(38, 41, 54),rgb(38, 41, 54),rgba(38, 41, 54,.8),rgba(38, 41, 54,.7));
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
-    border-radius: 20px;
+    z-index: -1;
 }
 
-.teamSocialLink{
-    position: absolute;
-    left: 50%;
-    bottom: -25%;
-    transform: translate(-50%);
-    width: 60%;
+.lightoverlay{
+    background: linear-gradient(80deg,rgb(255, 255, 255),rgb(255, 255, 255),rgba(255, 255, 255,.9),rgba(255, 255, 255,.5),rgba(255, 255, 255,.2));
+}
+
+.container{
+    margin-top: 3em;
+    width: 100%;
+    max-width: 450px;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: all .5s ease-in-out;
+    flex-direction: column;
+    height: 70%;
 }
 
-.teamSocialLink img{
-    width: 20px;
+.offer{
+    color: var(--secondaryTextColor);
+    font-size: .7em;
+    text-transform: uppercase;
+    margin-bottom: 1em;
+}
+
+.heading{
+    position: relative;
+    font-size: 2rem;
+    color: var(--primaryTextColor);
+    margin-bottom: .7em;
+}
+
+.heading::after{
+    position: absolute;
+    content: "";
+    width: 10px;
+    height: 10px;
+    top: 70%;
+    transform: translate(0,-70%);
+    background-color: var(--primaryColor);
+    border-radius: 50%;
+    margin-left: .2em;
+}
+
+.para{
+    color: var(--secondaryTextColor);
+    font-size: .8em;
+    margin-bottom: 1em;
+}
+
+.link{
+    color: var(--primaryColor);
+    cursor: pointer;
     margin-left: 1em;
+    font-weight: bold;
 }
 
-.teamName{
-    white-space: collapse;
+.formGroup{
+    position: relative;
+    margin-bottom: 1em;
+    width: 100%;
 }
 
-.eachTeam:hover .teamSocialLink{
-    bottom: 10%;
+.usernameContainer{
+    display: flex;
+    flex-direction: column;
 }
 
-
-@media screen and (min-width:800px) {
-    .aboutusDesc{
-        order: 1;
-    }   
-
-    .statusContainer{
-        gap: 50px;
-        grid-template-columns: 1fr 1fr 1fr;
-    }
-
-    .offers{
-        grid-template-columns: 1fr 1fr;
-       gap: 20px;
-    }
-
-    .videoSection{
-        grid-template-columns: 1fr 3fr;
-      }
-
-    .videoSectionHeader{
-        z-index: 1;
-        transform: translateX(50%);
-    }
-      
+.placeholder{
+    position: absolute;
+    color: var(--secondaryTextColor);
+    left: 1em;
+    top: 50%;
+    transform: translate(0,-50%);
+    transition: all .5s ease-in-out;
+    font-size: .7rem;
+    font-weight: bold;
 }
 
-@media screen and (min-width:1000px) {
-    .offers{
-        grid-template-columns: 1fr 1fr 1fr;
-    }
+.notNull{
+    top: 1em;
+}
 
-    .videoSectionHeader{
-        font-size: 3.5rem;
+.input{
+    padding: 1.2em;
+    padding-top: 2em;
+    height: 100%;
+    width: 100%;
+    background-color: var(--inputBg);
+    border-radius: 15px;
+    border: none;
+    height: 30px;
+    outline: none;
+    font-size: .9rem;
+    font-weight: bold;
+    color: var(--primaryTextColor);
+    transition: all .5s ease-in-out;
+    border: 2px solid var(--inputBg);
+}
+
+.input:focus ~.placeholder{
+    color: var(--primaryColor);
+    top: 1em;
+}
+
+.input:focus{
+    border: 2px solid var(--primaryColor);
+    background-color: var(--secondaryColor);
+}
+
+.inputIcon{
+    position: absolute;
+    right: 10px;
+    top: 50%;
+    transform: translate(0,-50%);
+    color: var(--secondaryTextColor);
+    z-index: 1000000;
+}
+
+.fa-eye{
+    cursor: pointer;
+}
+
+.btn-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+}
+
+.btn{
+    border: none;
+    padding: .8em 1em;
+    cursor: pointer;
+    border-radius: 20px;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.btn1{
+    background-color: var(--inputBg);
+    border: 2px solid var(--inputBg);
+    color: var(--btnTextColor);
+}
+
+.btn2{
+    background-color: var(--primaryColor);
+    border: 2px solid var(--primaryColor);
+    color: #fff;
+}
+
+#loginForm{
+    display: none;
+}
+
+@media screen and (min-width:700px) {
+    section{
+        padding-bottom: 5em;
+        padding-left: 6em;
+    }
+    .projectIcon{
+        opacity: 1;
+    }
+    .usernameContainer{
+        flex-direction: row;
+    }
+    
+    .usernameContainer .formGroup:first-child{
+        margin-right: 1em;
     }
 }
